--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "XBOT",
+  "name": "AINEBOT",
   "version": "1.0.0",
   "description": "khusus termux",
   "main": "index.js",
@@ -29,7 +29,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/affisjunianto/botwasap.git"
+    "url": "git+https://github.com/anemio/aineboty.git"
   },
   "keywords": [
     "k"
@@ -37,7 +37,7 @@
   "author": "Abdul Muttaqin",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/affisjunianto/botwasap/issues"
+    "url": "https://github.com/anemio/aineboty/issues"
   },
-  "homepage": "https://github.com/affisjunianto/botwasap/readme"
+  "homepage": "https://github.com/anemio/aineboty/readme"
 }
